--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -39,16 +39,12 @@ spec:
             configMapKeyRef:
               name: devops-chatbot-config
               key: HOST
-        - name: OPENAI_API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: devops-chatbot-secrets
-              key: OPENAI_API_KEY
+        - name: OLLAMA_URL
+          value: "http://192.168.18.241:11434"
+        - name: OLLAMA_MODEL
+          value: "llama3.1:8b"
         - name: SECRET_KEY
-          valueFrom:
-            secretKeyRef:
-              name: devops-chatbot-secrets
-              key: SECRET_KEY
+          value: "devops-chatbot-k8s-demo"
         resources:
           requests:
             memory: "256Mi"
