--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -6,12 +6,13 @@ metadata:
   labels:
     app: devops-chatbot
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: devops-chatbot
   ports:
   - name: http
     port: 80
     targetPort: 5000
+    nodePort: 30000
     protocol: TCP
   sessionAffinity: ClientIP
