Enhance chatbot UX, RAG flow, and optional web lookup

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,17 @@
 # Ollama Configuration
 OLLAMA_URL=http://ollama:11434
-OLLAMA_MODEL=llama3.1:8b
+OLLAMA_MODEL=llama3.2:1b
+OLLAMA_NUM_PREDICT=192
+OLLAMA_TEMPERATURE=0.6
+OLLAMA_TIMEOUT_SECONDS=120
+OLLAMA_KEEP_ALIVE=30m
+CHAT_HISTORY_MESSAGES=6
+RAG_TOP_K=3
+RAG_CHUNK_SIZE=700
+RAG_CHUNK_OVERLAP=120
+WEB_LOOKUP_TOP_K=5
+GOOGLE_API_KEY=
+GOOGLE_CSE_ID=
 
 # Flask Configuration
 FLASK_ENV=development
