--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - ollama-data:/root/.ollama
     restart: unless-stopped
+    security_opt:
+      - apparmor=unconfined
     networks:
       - chatbot-network
     labels:
@@ -19,7 +21,15 @@ services:
       - "5000:5000"
     environment:
       - OLLAMA_URL=http://ollama:11434
-      - OLLAMA_MODEL=llama3.1:8b
+      - OLLAMA_MODEL=llama3.2:1b
+      - OLLAMA_NUM_PREDICT=192
+      - OLLAMA_TEMPERATURE=0.6
+      - OLLAMA_TIMEOUT_SECONDS=120
+      - OLLAMA_KEEP_ALIVE=30m
+      - CHAT_HISTORY_MESSAGES=6
+      - WEB_LOOKUP_TOP_K=5
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY:-}
+      - GOOGLE_CSE_ID=${GOOGLE_CSE_ID:-}
       - FLASK_ENV=production
       - FLASK_DEBUG=False
       - PORT=5000
@@ -27,10 +37,18 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+    security_opt:
+      - apparmor=unconfined
     depends_on:
       - ollama
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      test:
+        [
+          "CMD",
+          "python",
+          "-c",
+          "import requests,sys; sys.exit(0 if requests.get('http://localhost:5000/api/health', timeout=5).ok else 1)",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
